src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Attended_Archive_Count__c</fullName>
        <description>The number of users who attended the archive portion of the event. A cumulative number.</description>
        <label>Attended Archive Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendee_Count__c</fullName>
        <description>The number of attendees for the event. A cumulative number.</description>
        <label>Attendee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendee_Live_Count__c</fullName>
        <description>The number of attendees for the event. A cumulative number.</description>
        <label>Attendee Live Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audience_URL__c</fullName>
        <description>URL to access the webinar</description>
        <inlineHelpText>URL to access the webinar</inlineHelpText>
        <label>Audience URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <description>unique event identifier</description>
        <externalId>true</externalId>
        <label>Event ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <description>This is the published date/time of the event.  e.g., Thu, 30 Apr 2009 12:19 PDT</description>
        <label>Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <description>The main tagline or title for the event. Typically under 100 characters.</description>
        <label>Event Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Show_Count__c</fullName>
        <description>The number of people who registered but did not attend. A cumulative number.</description>
        <label>No Show Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products_Promoted__c</fullName>
        <label>Products Promoted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US REA</fullName>
                </value>
                <value>
                    <fullName>US REIT</fullName>
                </value>
                <value>
                    <fullName>EUR REA</fullName>
                </value>
                <value>
                    <fullName>EUR REIT</fullName>
                </value>
                <value>
                    <fullName>NEWS - CMAlert</fullName>
                </value>
                <value>
                    <fullName>NEWS - REAlert</fullName>
                </value>
                <value>
                    <fullName>NEWS - HFAlert</fullName>
                </value>
                <value>
                    <fullName>NEWS - ABAlert</fullName>
                </value>
                <value>
                    <fullName>NEWS - React</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registrant_Count__c</fullName>
        <description>The number of registrants for this event. A cumulative number.</description>
        <label>Registrant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Event_Time__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Registrant_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>Target_Lists</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Target List</value>
        </filters>
        <label>Target Lists</label>
    </listViews>
    <listViews>
        <fullName>Trial_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Free Trial</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>Digital:</value>
        </filters>
        <label>News Alert Trials</label>
    </listViews>
    <recordTypes>
        <fullName>Content_Advertising</fullName>
        <active>true</active>
        <label>Content/Advertising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Green_Street_Event</fullName>
        <active>true</active>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Net_Promoter_Score</fullName>
        <active>true</active>
        <label>Net Promoter Score</label>
    </recordTypes>
    <recordTypes>
        <fullName>News</fullName>
        <active>true</active>
        <label>News</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <description>Sales Outreach Efforts</description>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Target_List</fullName>
        <active>true</active>
        <label>Target List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>